Enhance TelerikComboBox with filtering capabilities
Added `Filterable` and `FilterOperator` properties to
multiple instances of the `TelerikComboBox` component
in various Razor files. This improvement allows users
to filter items based on input text, enhancing usability
and functionality of dropdowns in forms.

--- a/BlazorTool.Client/Components/AddActivityForm.razor
+++ b/BlazorTool.Client/Components/AddActivityForm.razor
@@ -26,6 +26,7 @@
                                              TextField="@nameof(Person.Name)"
                                              Placeholder="@Localizer["WorkOrder_SelectPerson"]"
                                              Filterable="true"
+                                                 FilterOperator="@Telerik.Blazor.StringFilterOperator.Contains"
                                              ShowClearButton="true"
                                              
                                              >
@@ -44,6 +45,7 @@
                                          TextField="@nameof(WODict.Name)"
                                          Placeholder="@Localizer["WorkOrder_SelectWOCategory"]"
                                          Filterable="true"
+                                                 FilterOperator="@Telerik.Blazor.StringFilterOperator.Contains"
                                          ShowClearButton="true"
                                          
                                                  >
