--- a/BlazorTool.Client/Components/JoinToActivityForm.razor
+++ b/BlazorTool.Client/Components/JoinToActivityForm.razor
@@ -26,6 +26,7 @@
                                                  TextField="@nameof(Person.Name)"
                                                  Placeholder="@Localizer["WorkOrder_SelectPerson"]"
                                                  Filterable="true"
+                                                 FilterOperator="@Telerik.Blazor.StringFilterOperator.Contains"
                                                  ShowClearButton="true">
                                 </TelerikComboBox>
                             </div>
