Исправлено: добавлена функция получения списка категорий и причин Workorder по ID устройства, внедрено использование этой функции при создании/редактировании WorkOrder. Аналогично и для Activity categories

--- a/BlazorTool.Client/Components/ActivityDisplay.razor
+++ b/BlazorTool.Client/Components/ActivityDisplay.razor
@@ -15,7 +15,7 @@
                  +
                 </button>
             }
-            @String.Join(", ", Persons?.Select(p => p.Name).ToList() ?? new List<string>())
+            -> @String.Join(", ", Persons?.Select(p => p.Name).ToList() ?? new List<string>())
         </div>
         <span class="activity-date" title="@Localizer["ActivityDisplay_DateAdded"]">@ActivityItem.AddDate.ToString("dd.MM.yyyy HH:mm")</span>
     </div>
