--- a/BlazorTool.Client/Components/AddActivityForm.razor
+++ b/BlazorTool.Client/Components/AddActivityForm.razor
@@ -113,9 +113,8 @@
         ActivityModel.PersonID = UserState.PersonID ?? 0;
         var WO = await ApiClient.GetWorkOrderByIdAsync(WorkOrderID);
         var takePersonsIDs = WO.TakePersons?.Split('#');
-
         bool isMyOrder = takePersonsIDs?.Any(x => x == UserState.PersonID.ToString()) ?? false;
-        ActivityModel.WorkLoad = isMyOrder ? CalculateDecimalHours(WO?.TakeDate) : 0.25m;
+        ActivityModel.WorkLoad = isMyOrder ? CalculateDecimalHours(WO?.PersonTakeDate ?? WO?.TakeDate) : 0.25m;
         People = ApiClient.GetAllPersonsCached(); // From cache
         Categories = await ApiClient.GetActCategoriesByDeviceCategory(WO?.DeviceCategoryID ?? 0); 
     }
