Implement user permission checks across components
- Introduced a new `PermissionType` enum in `PermissionType.cs` to manage user access.
- Enhanced `UserState.cs` with a `HasPermission` method for dynamic permission management.
- Enhanced `WorkOrderComponent.razor` with permission checks for editing descriptions and assigned persons.
- Updated `AppointmentEditor.razor` to conditionally display buttons based on user permissions for various actions.
- Added permission checks in `OrdersGrid.razor` for adding and editing orders.
- Modified `Home.razor` to render the "Add New" button based on user permissions.
- Updated `SchedulerPage.razor` to include permission checks for editing work orders and adding appointments.
- Modified `OrdersPage.razor` to include permission checks for context menu items.

--- a/BlazorTool.Client/Components/AppointmentEditor.razor
+++ b/BlazorTool.Client/Components/AppointmentEditor.razor
@@ -10,26 +10,34 @@
 
 <EditForm Model="@Appointment" OnValidSubmit="@SaveAppointment">
    
-      <div class="button-row">
+  <div class="button-row">
+    @if(isEditable)
+    {
         <TelerikButton Class="popup-target" ThemeColor="@ThemeConstants.Button.ThemeColor.Primary">@SaveIcon @Localizer["AppointmentEditor_Save"]</TelerikButton>
+    }
 
-        <TelerikButton OnClick="@CancelEditing" ButtonType="ButtonType.Button">@CancelIcon @Localizer["AppointmentEditor_Cancel"]</TelerikButton>
+    <TelerikButton OnClick="@CancelEditing" ButtonType="ButtonType.Button">@CancelIcon @Localizer["AppointmentEditor_Cancel"]</TelerikButton>
+
     @if(isScheduler)
     {
             <TelerikButton OnClick="@DeleteAppointment" ButtonType="ButtonType.Button">@DeleteIcon @Localizer["AppointmentEditor_DeleteFromScheduler"]</TelerikButton>
     }
 
-    @if (!isWOClosed)
+    @if (!isWOClosed && UserState.HasPermission(PermissionType.WO_Close))
     {
         <TelerikButton OnClick="@CloseAppointment" ButtonType="ButtonType.Button" ThemeColor="@ThemeConstants.Button.ThemeColor.Warning">@CloseOrderIcon @Localizer["AppointmentEditor_FinishOrder"]</TelerikButton>
     }
-        @if (!isCurrentWOTakenByUser 
-        && (UserState.CanHaveManyActiveTake || !userHaveAnyTakenWorkOrders))
-        {
-            <TelerikButton OnClick="@OnTakeWorkOrder" ButtonType="ButtonType.Button">@TakeOrderIcon @Localizer["TakeOrder"]</TelerikButton>
-        }
 
+    @if (!isCurrentWOTakenByUser 
+    && (UserState.CanHaveManyActiveTake || !userHaveAnyTakenWorkOrders))
+    {
+        <TelerikButton OnClick="@OnTakeWorkOrder" ButtonType="ButtonType.Button">@TakeOrderIcon @Localizer["TakeOrder"]</TelerikButton>
+    }
+
+    @if(UserState.HasPermission(PermissionType.AcT_Add))
+    {
         <TelerikButton OnClick="@(() => WORef?.AddActivity())" ButtonType="ButtonType.Button" ThemeColor="@ThemeConstants.Button.ThemeColor.Primary">@AddAction @Localizer["WorkOrder_AddActivity"]</TelerikButton>
+    }
 
     </div>
 </EditForm>
